--- a/pitch-deck/index_backup_v2.html
+++ b/pitch-deck/index_backup_v2.html
@@ -208,8 +208,8 @@
         </div>
         <div style="width: 1px; height: 40px; background: rgba(255,255,255,0.1);"></div>
         <div style="text-align: center;">
-          <p style="font-weight: 300; font-size: 32px; color: var(--text-primary);">$125</p>
-          <p class="stat-label">Blended CAC</p>
+          <p style="font-weight: 300; font-size: 32px; color: var(--text-primary);">$0</p>
+          <p class="stat-label">Customer acq. cost</p>
         </div>
       </div>
     </div>
@@ -341,9 +341,9 @@
       </div>
       <div style="display: flex; flex-direction: column; gap: 40px; padding-top: 56px; min-width: 340px;">
         <div>
-          <p class="stat-number accent" style="font-size: 72px;">$125</p>
-          <p class="stat-label" style="margin-top: 12px;">Blended CAC</p>
-          <p style="font-size: 13px; color: var(--text-muted); opacity: 0.5; margin-top: 6px;">vs. $650+ industry average</p>
+          <p class="stat-number accent" style="font-size: 72px;">$0</p>
+          <p class="stat-label" style="margin-top: 12px;">Customer acquisition cost</p>
+          <p style="font-size: 13px; color: var(--text-muted); opacity: 0.5; margin-top: 6px;">Customers already exist and pay</p>
         </div>
         <div style="width: 100%; height: 1px; background: rgba(255,255,255,0.06);"></div>
         <div>
@@ -443,9 +443,9 @@
         <p style="font-size: 12px; color: var(--text-muted); opacity: 0.5; margin-top: 4px;">Weighted across 3 tiers</p>
       </div>
       <div>
-        <p class="stat-number" style="font-size: 64px;">$125</p>
+        <p class="stat-number" style="font-size: 64px;">$0</p>
         <p class="stat-label" style="margin-top: 12px;">CAC</p>
-        <p style="font-size: 12px; color: var(--text-muted); opacity: 0.5; margin-top: 4px;">40% InfoAcademy / 30% Org / 30% Partner</p>
+        <p style="font-size: 12px; color: var(--text-muted); opacity: 0.5; margin-top: 4px;">Organic from InfoAcademy</p>
       </div>
       <div>
         <p class="stat-number" style="font-size: 64px;">85%</p>
@@ -453,9 +453,9 @@
         <p style="font-size: 12px; color: var(--text-muted); opacity: 0.5; margin-top: 4px;">SaaS-typical at scale</p>
       </div>
       <div>
-        <p class="stat-number" style="font-size: 64px;">18:1</p>
+        <p class="stat-number" style="font-size: 64px;">Infinite</p>
         <p class="stat-label" style="margin-top: 12px;">LTV : CAC</p>
-        <p style="font-size: 12px; color: var(--text-muted); opacity: 0.5; margin-top: 4px;">Top 1% efficiency (Industry avg 3:1)</p>
+        <p style="font-size: 12px; color: var(--text-muted); opacity: 0.5; margin-top: 4px;">Effectively infinite CAC = 0</p>
       </div>
     </div>
 
@@ -566,7 +566,7 @@
     </div>
 
     <p style="position: absolute; bottom: 80px; left: 120px; font-size: 20px; color: var(--accent);">
-      Replication cost: $500K&ndash;$2M + 18 months. APEX OS cost: $125.
+      Replication cost: $500K&ndash;$2M + 18 months. APEX OS cost: $0.
     </p>
   </div>
 
