--- a/pitch-deck/index_v5_final.html
+++ b/pitch-deck/index_v5_final.html
@@ -247,10 +247,8 @@
   <!-- SLIDE 01 — TITLE                                          -->
   <!-- ═══════════════════════════════════════════════════════════ -->
   <div class="slide active" id="slide-01">
+    <img src="pitch-deck/assets/APEXRETRO.png" alt="APEX OS Logo" style="position: absolute; top: 80px; left: 120px; height: 64px;">
     <div style="display: flex; flex-direction: column; justify-content: center; height: 100%; text-align: left;">
-      <div style="margin-bottom: 12px;">
-        <img src="assets/apex-logo.png" alt="APEX OS" style="height: 48px; opacity: 0.9;">
-      </div>
       <h1 style="font-size: 80px; font-weight: 800; color: var(--text-primary); line-height: 1.05; letter-spacing: -0.03em; margin-top: 40px;">
         APEX OS
       </h1>
@@ -423,15 +421,15 @@
       <div style="display: flex; gap: 24px; margin-top: 28px; height: 520px; align-items: flex-start;">
         <!-- Desktop screenshot -->
         <div style="flex: 1.6; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
-          <img src="assets/desktop-terminal-full.png" alt="APEX OS Desktop Terminal" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+          <img src="pitch-deck/assets/desktop-terminal-new.png" alt="APEX OS Desktop Terminal" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
         </div>
         <!-- Mobile screenshots -->
         <div style="display: flex; gap: 16px; height: 100%;">
           <div style="width: 180px; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
-            <img src="assets/mobile-player1.png" alt="APEX OS Mobile - Player Dashboard" style="width: 100%; height: 100%; object-fit: cover; object-position: top;">
+            <img src="pitch-deck/assets/mobile-terminal-new.png" alt="APEX OS Mobile - Player Dashboard" style="width: 100%; height: 100%; object-fit: cover; object-position: top;">
           </div>
           <div style="width: 180px; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
-            <img src="assets/mobile-onboarding.png" alt="APEX OS Mobile - Onboarding" style="width: 100%; height: 100%; object-fit: cover; object-position: top;">
+            <img src="pitch-deck/assets/mobile-dashboard-new.png" alt="APEX OS Mobile - Onboarding" style="width: 100%; height: 100%; object-fit: cover; object-position: top;">
           </div>
         </div>
       </div>
@@ -701,7 +699,7 @@
       <!-- Photo -->
       <div style="width: 380px; flex-shrink: 0;">
         <div style="width: 100%; aspect-ratio: 3/4; overflow: hidden; border-radius: 8px; box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
-          <img src="assets/founder-photo.jpg" alt="Nicolae Fratila" style="width: 100%; height: 100%; object-fit: cover; filter: grayscale(100%);">
+          <img src="pitch-deck/assets/founder-photo-new.jpg" alt="Nicolae Fratila" style="width: 100%; height: 100%; object-fit: cover; filter: grayscale(100%);">
         </div>
       </div>
       <!-- Bio -->
