--- a/pitch-deck/index_v5_final.html
+++ b/pitch-deck/index_v5_final.html
@@ -420,16 +420,16 @@
 
       <div style="display: flex; gap: 24px; margin-top: 28px; height: 520px; align-items: flex-start;">
         <!-- Desktop screenshot -->
-        <div style="flex: 1.6; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
-          <img src="assets/desktop-terminal-new.png" alt="APEX OS Desktop Terminal" style="width: 100%; height: 100%; object-fit: contain; background: #000; object-position: center;">
+        <div style="flex: 2; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
+          <img src="assets/desktop-terminal-full.png" alt="APEX OS Desktop Terminal" style="width: 100%; height: 100%; object-fit: contain; background: #000; object-position: center;">
         </div>
         <!-- Mobile screenshots -->
         <div style="display: flex; gap: 16px; height: 100%;">
-          <div style="width: 180px; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
-            <img src="assets/mobile-terminal-new.png" alt="APEX OS Mobile - Player Dashboard" style="width: 100%; height: 100%; object-fit: contain; background: #000; object-position: top;">
+          <div style="width: 290px; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
+            <img src="assets/mobile-terminal-new.png" alt="APEX OS Mobile - Player Dashboard" style="width: 100%; height: 100%; object-fit: contain; background: #000; object-position: center;">
           </div>
-          <div style="width: 180px; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
-            <img src="assets/mobile-dashboard-new.png" alt="APEX OS Mobile - Onboarding" style="width: 100%; height: 100%; object-fit: contain; background: #000; object-position: top;">
+          <div style="width: 290px; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
+            <img src="assets/mobile-dashboard-new.png" alt="APEX OS Mobile - Onboarding" style="width: 100%; height: 100%; object-fit: contain; background: #000; object-position: center;">
           </div>
         </div>
       </div>
