--- a/pitch-deck/index_v5_final.html
+++ b/pitch-deck/index_v5_final.html
@@ -431,13 +431,16 @@
           <div style="width: 240px; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
             <img src="assets/mobile-dashboard-new.png" alt="APEX OS Mobile - Onboarding" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
           </div>
+          <div style="width: 240px; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
+            <img src="assets/mobile-extra.png" alt="APEX OS Mobile - Extra View" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+          </div>
         </div>
       </div>
 
       <div style="display: flex; gap: 40px; margin-top: 16px;">
         <span style="font-size: 13px; color: var(--text-muted);">ORCHESTRATOR COCKPIT &nbsp;— Desktop Terminal</span>
         <span style="font-size: 13px; color: var(--text-muted);">PLAYER DASHBOARD &nbsp;— Mobile</span>
-        <span style="font-size: 13px; color: var(--text-muted);">ONBOARDING FLOW &nbsp;— Mobile</span>
+        <span style="font-size: 13px; color: var(--text-muted);">ONBOARDING &amp; STATUS &nbsp;— Mobile</span>
       </div>
     </div>
     <div class="slide-footer">
