Fix white image issue: Force asset refresh with new filename

--- a/pitch-deck/index_v5_final.html
+++ b/pitch-deck/index_v5_final.html
@@ -432,7 +432,7 @@
             <img src="assets/mobile-dashboard-new.png" alt="APEX OS Mobile - Onboarding" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
           </div>
           <div style="width: 240px; height: 100%; overflow: hidden; border-radius: 8px; border: 1px solid var(--bg-card-border); box-shadow: 0 24px 48px rgba(0,0,0,0.4);">
-            <img src="assets/mobile-extra.png" alt="APEX OS Mobile - Extra View" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+            <img src="assets/mobile-extra-v2.png" alt="APEX OS Mobile - Extra View" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
           </div>
         </div>
       </div>
